[package]
name = "rac-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
hex = "0.4.3"
openssl = "0.10.66"
raclients = { path = "../raclients", features = ["frontend"] }
reqwest = { version = "0.12.7", features = ["blocking", "cookies", "json"] }
serde_json = "1.0.127"
sev = { version = "4.0.0", default-features = false, features = ["snp"] }
