[package]
name = "raclients"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "frontend"]
std = []
alloc = []
frontend = []

[dependencies]
serde = { version = "1.0.209", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.127", default-features = false, features = ["alloc"] }
